# fraxtal-op-reth

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.cross  Makefile  init.sh  run.sh
.github/workflows/: nightly.yml  release.yml
crates/chainspec/: Cargo.toml
crates/chainspec/src/: bootnodes.rs  fraxtal.rs  fraxtal_hoodi_testnet.rs  fraxtal_testnet.rs  lib.rs
crates/evm/: Cargo.toml
crates/evm/src/: error.rs  execute.rs  frxusd.rs  lib.rs
crates/node/: Cargo.toml
crates/node/src/: lib.rs  network.rs  node.rs  proof_history.rs
crates/op-evm/: Cargo.toml
crates/op-evm/src/: lib.rs
crates/op-evm/src/block/: canyon.rs  granite.rs  mod.rs  utils.rs
crates/op-evm/src/block/holocene/: constants.rs  mod.rs
crates/op-evm/src/block/isthmus/: constants.rs  mod.rs
crates/payload/: Cargo.toml
crates/payload/src/: builder.rs  error.rs
src/: main.rs
src/chainspec/: fraxtal.rs  fraxtal_testnet.rs
