
[package]
name = "fraxtal-chainspec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
reth-chainspec.workspace = true
reth-ethereum-forks.workspace = true
reth-cli.workspace = true
reth-optimism-chainspec.workspace = true
reth-optimism-forks.workspace = true
reth-primitives-traits.workspace = true

alloy-chains.workspace = true
alloy-primitives.workspace = true
alloy-genesis.workspace = true
serde_json.workspace = true
eyre.workspace = true
