[package]
name = "fraxtal-evm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
fraxtal-op-evm.workspace = true

# Reth
reth-evm.workspace = true
reth-revm.workspace = true
reth-consensus.workspace = true
reth-chainspec.workspace = true
reth-optimism-evm.workspace = true
reth-optimism-chainspec.workspace = true
reth-optimism-consensus.workspace = true
reth-optimism-forks.workspace = true
reth-optimism-primitives.workspace = true
reth-primitives.workspace = true
reth-primitives-traits.workspace = true

# revm
revm.workspace = true
revm-primitives.workspace = true
op-revm.workspace = true

# alloy
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true

# Optimism
op-alloy-consensus.workspace = true
alloy-op-evm.workspace = true
alloy-evm.workspace = true

# misc
tracing.workspace = true
thiserror.workspace = true

[features]
default = ["std"]
std = [
    "reth-consensus/std",
    "reth-primitives/std",
    "reth-revm/std",
    "alloy-consensus/std",
    "alloy-eips/std",
    "revm-primitives/std",
    "revm/std",
    "reth-optimism-primitives/std",
    "reth-optimism-forks/std",
    "thiserror/std",
    "op-alloy-consensus/std",
    "reth-chainspec/std",
]
optimism = []
