[package]
name = "fraxtal-op-evm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
reth-chainspec.workspace = true
alloy-evm = { workspace = true, features = ["op"] }

alloy-eips.workspace = true
alloy-consensus.workspace = true
alloy-primitives.workspace = true

alloy-op-hardforks.workspace = true
op-alloy-consensus.workspace = true
alloy-op-evm.workspace = true

revm.workspace = true
op-revm.workspace = true

auto_impl.workspace = true
tracing.workspace = true

[features]
default = ["std"]
std = [
    "alloy-primitives/std",
    "revm/std",
    "alloy-evm/std",
    "op-revm/std",
    "alloy-consensus/std",
    "alloy-eips/std",
    "op-alloy-consensus/std",
]
