
[package]
name = "fraxtal-payload-builder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
fraxtal-evm.workspace = true

# Reth
reth-evm.workspace = true
reth-basic-payload-builder.workspace = true
reth-revm.workspace = true
reth-consensus.workspace = true
reth-chain-state.workspace = true
reth-chainspec.workspace = true
reth-execution-types.workspace = true
reth-optimism-evm.workspace = true
reth-optimism-chainspec.workspace = true
reth-optimism-consensus.workspace = true
reth-optimism-forks.workspace = true
reth-optimism-primitives.workspace = true
reth-optimism-payload-builder.workspace = true
reth-payload-builder-primitives.workspace = true
reth-payload-primitives.workspace = true
reth-payload-util.workspace = true
reth-primitives.workspace = true
reth-primitives-traits.workspace = true
reth-provider.workspace = true
reth-transaction-pool.workspace = true

# revm
revm.workspace = true
revm-primitives.workspace = true

# alloy
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-rpc-types-debug.workspace = true
alloy-rlp.workspace = true

# Optimism
op-alloy-rpc-types-engine = { workspace = true, features = ["serde"] }
op-alloy-consensus.workspace = true

# misc
derive_more.workspace = true
tracing.workspace = true
thiserror.workspace = true

[features]
default=["optimism"]
optimism = [
	# "reth-primitives/optimism",
	# "reth-provider/optimism",
	# "reth-optimism-evm/optimism",
	# "revm/optimism",
	"reth-execution-types/optimism",
	# "reth-optimism-consensus/optimism",
	# "reth-optimism-primitives/optimism"
]
